Fix mismatched nullptr check for caret paint invalidation.

We moved to checking need-for-repaint and invalidating based
on anchor node in http://crrev.com/2401363003 but we
incorrectly left null-checking based on non-anchor node.

BUG=663319

Review-Url: https://codereview.chromium.org/2565103002
Cr-Commit-Position: refs/heads/master@{#437804}

Former-commit-id: 05b6f4be7e2e45c518441e2cf546d4472ee06fcb